<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paramsSet"
        android:textColor="#000000"
        android:layout_marginLeft="50sp"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/K"
            android:textSize="30sp"
            android:layout_marginLeft="50sp"/>
        <EditText
            android:layout_width="30sp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_K"
            android:layout_marginLeft="30sp"
            android:inputType="number"
            android:background="@drawable/bg_edittext"
            android:textColorHint="#AAAAAA"
            android:singleLine="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/H"
            android:textSize="30sp"
            android:layout_marginLeft="50sp" />
        <EditText
            android:layout_width="30sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:id="@+id/edit_H"
            android:inputType="number"
            android:background="@drawable/bg_edittext"
            android:textColorHint="#AAAAAA"
            android:singleLine="true"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/KNNChoice"
        android:layout_marginLeft="50sp"
        android:textSize="20sp"
        android:textColor="#000000"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGround2">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:text="@string/calcInLocal"
            android:id="@+id/radio_local"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:text="@string/calcInServer"
            android:id="@+id/radio_net"
            />
    </RadioGroup>

    <Button
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/save"
        android:id="@+id/btn_save"/>
</LinearLayout>